--- a/packing-list_front-end/src/index.css
+++ b/packing-list_front-end/src/index.css
@@ -17,21 +17,35 @@ nav {
   padding: 10px;
   width: 100%;
 }
+.page-container {
+  position: relative;
+  text-align: center;
+  min-height: 100vh;
+}
+.pageContent {
+  padding-bottom: 2rem;
+}
 .footer {
   margin: 0;
   height: 2rem;
-  /* position: absolute; */
+  position: absolute;
   text-align: center;
   bottom: 0;
+  width: 100%;
 }
 .listDiv {
+  display: inline-flex;
+  align-content: center;
 }
 .listName {
   width: 30vw;
   display: inline-flex;
   text-align: center;
   font-size: 1.2rem;
-  font-weight: 600;
+  font-weight: 800;
   padding: 1rem;
   /* margin: 1rem; */
+}
+h3 {
+  font-weight: 800;
 }
