--- a/packing-list_front-end/src/index.css
+++ b/packing-list_front-end/src/index.css
@@ -49,3 +49,93 @@ nav {
 h3 {
   font-weight: 800;
 }
+.oneListName {
+  font-size: 2rem;
+  font-weight: 600;
+}
+.oneListDestination,
+.oneListCategory {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+.itemName {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+ul.itemList {
+  padding: 0 25px;
+}
+
+li.item {
+  list-style-type: none;
+  font-family: Tahoma;
+  font-size: 1.2em;
+  padding: 10px 0;
+  border-bottom: 1px solid #ccc;
+}
+
+li.item:hover .deleteItemBtn {
+  visibility: visible;
+  opacity: 1;
+}
+input.itemCheckbox {
+  position: relative;
+  float: left;
+  margin-right: 10px;
+  -webkit-appearance: none;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  outline: none;
+  margin-left: 5px;
+  text-align: center;
+  cursor: pointer;
+  font-weight: bold;
+}
+
+input.itemCheckbox:checked:after {
+  color: #ff3860;
+  content: "\2713";
+  display: block;
+  font-size: 17px;
+  height: 17px;
+  position: absolute;
+  width: 17px;
+  left: 0.5px;
+  bottom: 2px;
+}
+
+input.itemCheckbox + label.itemLabel {
+  color: black;
+}
+
+input.itemCheckbox:checked + label.itemLabel {
+  text-decoration: line-through;
+  color: #656565;
+}
+.listWrapper {
+  margin: 0 auto;
+  width: 50vw;
+  bottom: 50px;
+  top: 180px;
+  right: 0;
+  left: 0;
+  overflow: auto;
+}
+
+.deleteItemBtn {
+  float: right;
+  color: #ff3860;
+  background: rgba(0, 0, 0, 0);
+  font-size: 20px;
+  font-weight: bold;
+  border: 1px solid white;
+  border-radius: 50%;
+  padding: 10px 5px;
+  visibility: hidden;
+  opacity: 0;
+  line-height: 0;
+  margin-right: 5px;
+  cursor: default;
+}
